--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -1,52 +1,67 @@
+
 .box{
 
     width: 100vw;
     height: 40vh;
-
     display: flex;
     flex-direction: row;
+    padding: 3% 5%;
     justify-content: center;
-    align-items: center;
-
-
-    padding: 2%;
-
+    
     background-color: #777777;
 }
 
 .logo{
 
-    width: 40vw;
+    width: 30vw;
     height: 20vh;
-    
     display: flex;
-    justify-content: center;
-    align-items: center;
-
-    position: relative;
-
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    position: relative;    
     
-
 }
 
 .info{
 
     width: 20vw;
     height: 10vh;
-    
     display: flex;
     justify-content: center;
     align-items: center;
-
     position: relative;
 
     
 
 }
 
-.text{
+.text_icons{
+    color: white;
+    margin-left: 2%;
+    
+}
+
+.text_logo{
     
     color: white;
-    font-weight: bold;
-    margin-left: 2%;
+    font-size: 1.35rem;
+    margin-top: -5%;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+
+@media (max-width: 600px) {
+  .box {
+    flex-direction: column;
+  }
+  .logo {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .text_logo{
+    display: none;
+  }
 }
