--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -16,7 +16,7 @@
     width: 30vw;
     height: 20vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     justify-content: flex-start;
     align-items: flex-start;
     position: relative;    
