--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -14,13 +14,13 @@
 
 .box_content{
   width: 100vw;
-  height: 20vh;
+  height: 32vh;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-evenly;
+  align-items: center;
   position: relative;
-  margin: 0 5% 5% 0;
-/*background-color: aqua;*/
+  background-color: aqua;
      
 }
 
@@ -33,33 +33,37 @@
   justify-content: center;
   padding: 0 1%;
   margin-left: 32vw;
+ 
+}
+
+.image_logo{
+  width: 40vw;
+  height: 20vh;
+  
+  position: relative;
+ /* background-color: brown;*/
 }
 
 .logo{
+  width: 40vw;
   display: flex;
   flex-direction: column;
-  margin-right: 15%;
-  transform: translateX(-20vw);
-  /*background-color: black;*/
-  position: absolute;
+  position: relative;
+  background-color: black;
 }
 
 .info{
 
-    width: 59vw;
-    height: 10vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    margin-right: -50%;
-   /*background-color: red;*/
+    width: 50%;
+    height: 50%;
+    margin-right: -20%;
+    background-color: red;
     
 
 }
 
 .text_icons{
-    font-size: 1.10rem;
+    font-size: 2rem;
     color: white;
     margin-left: 2%;
     margin-right: 5%;
@@ -69,11 +73,12 @@
 
 .text_logo{
     color: #ffffff;
-    font-size: 1.25rem;
+    font-size: 3rem;
     margin-top: -5%;
-    margin-left: 1.5%;
-    justify-content: flex-start;
-    align-items: flex-start;
+    
+    
+  /*  background-color: red;*/
+    
   }
 
 .text_CNPJ{
