--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -5,9 +5,8 @@
     height: 40vh;
     display: flex;
     flex-direction: column;
-    padding: 3% 0;
-    justify-content: center;
     
+    justify-content: center;
     background-color: #777777;
 }
 
@@ -17,9 +16,10 @@
   height: 32vh;
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   position: relative;
+  margin-top: -2%;
   /* background-color: aqua; */
      
 }
@@ -30,16 +30,17 @@
   height: 10vh;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+ /* justify-content: center;*/
   padding: 0 1%;
   margin-left: 32vw;
+  margin-bottom: -2%;
  
 }
 
 .image_logo{
-  width: 40vw;
+  width: 30vw;
   height: 20vh;
-  margin-left: -5%;
+  
   position: relative;
  /* background-color: brown;*/
 }
@@ -49,15 +50,19 @@
   display: flex;
   flex-direction: column;
   position: relative;
+  margin-left: 8vw;
   /* background-color: black; */
+  
 }
 
 .info{
 
     width: 50%;
     height: 50%;
-    margin-right: -20%;
-    /*background-color: red;*/
+    padding-left: 6vw;
+    display: flex;
+    align-items: center;
+    /* background-color: red; */
     
 
 }
@@ -74,7 +79,7 @@
 .text_logo{
     color: #ffffff;
     font-size: 3rem;
-    margin-top: -4%;
+    margin-top: -5%;
     
     
   /*  background-color: red;*/
