--- a/components/footer/footer.module.css
+++ b/components/footer/footer.module.css
@@ -38,11 +38,10 @@
 }
 
 .image_logo{
-  width: 30vw;
+  width: 32vw;
   height: 20vh;
-  
   position: relative;
- /* background-color: brown;*/
+  /* background-color: brown; */
 }
 
 .logo{
@@ -62,13 +61,13 @@
     padding-left: 6vw;
     display: flex;
     align-items: center;
-    /* background-color: red; */
+    /* background-color: red;  */
     
 
 }
 
 .text_icons{
-    font-size: 2rem;
+    font-size: 1.3rem;
     color: white;
     margin-left: 2%;
     margin-right: 5%;
@@ -77,12 +76,13 @@
 }
 
 .text_logo{
+    width: 40vw;
+    margin-top: -3%;
+    margin-left: 0%;
     color: #ffffff;
-    font-size: 3rem;
-    margin-top: -5%;
-    
-    
-  /*  background-color: red;*/
+    font-size: 2rem;
+    /* background-color: red; */
+  
     
   }
 
@@ -93,6 +93,53 @@
 
 
 }
+
+@media (max-width: 1200px){
+  .text_logo{
+    margin-top: -6%;
+  }
+}
+
+@media (max-width: 880px){
+  .box{
+    height: 50vh;
+  }
+
+  .box_CNPJ{
+    width: 50vw;
+    margin-left:  24vw;
+    padding: 0%;
+  }
+  .box_content{
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .info{
+    padding-left: 0%;
+    width: 100vw;
+    margin-right: 0%;
+    justify-content: center;
+  }
+
+  .logo{
+    margin-left: 0%;
+  }
+
+  .image_logo{
+    width: 50vw;
+    height: 20vh;
+    margin-left: -7vw;
+    position: relative;
+
+  }
+
+  .text_logo{
+    display: none;
+    
+  }
+}
+
 @media (max-width: 600px) {
   .text_logo{
     display: none;
@@ -106,12 +153,9 @@
   .logo{
     position: relative;
     justify-content: center;
-    margin-left: 50%;
+    /* margin-left: 50%; */
   }
 
-  .info{
-    width: 100vw;
-    margin-right: 0%;
-  }
+
+  
 }
-
