--- a/components/footer/css/content.module.css
+++ b/components/footer/css/content.module.css
@@ -10,16 +10,18 @@
   
   .info{
   
-      width: 50%;
-      height: 50%;
-      padding-left: 6vw;
+      width: 50vw;
+      height: 20vh;
+      margin-left: 5%;
       display: flex;
       align-items: center;
       /* background-color: red;  */
       
   
   }
-  
+
+
+
   @media (max-width: 880px){
     .info{
         padding-left: 0%;
@@ -29,15 +31,29 @@
     }
 
     .logo{
-        margin-left: 0%;
+        margin-left: -2%;
+        width: 50vw;
       }
     
   }
-  
-  @media (max-width: 600px){
-    .logo{
-        position: relative;
-        justify-content: center;
-        /* margin-left: 50%; */
+
+  @media (max-width: 880px){
+    .info{
+      margin-top: -7%;
     }
+
+    .logo{
+      width: 80vw;
+      position: relative;
+      justify-content: center;
+      margin-left: 0%;
+       /* background-color: black; */
+   }
   }
+  
+
+  @media (max-width: 450px){
+    .info{
+      display: none;
+    }
+  } 
