--- a/components/footer/css/images.module.css
+++ b/components/footer/css/images.module.css
@@ -1,6 +1,6 @@
 .image_logo{
     width: 32vw;
-    height: 20vh;
+    height: 10vw;
     position: relative;
     /* background-color: brown; */
   }
@@ -8,9 +8,12 @@
   @media (max-width: 880px){
     
     .image_logo{
-      width: 50vw;
+      width: 100%;
       height: 20vh;
-      margin-left: -7vw;
+      /* margin-left: -7vw; */
       position: relative;
     }
   }
+
+ 
+  
