--- a/components/footer/css/text.module.css
+++ b/components/footer/css/text.module.css
@@ -1,18 +1,16 @@
 .text_icons{
     font-size: 1.3rem;
     color: white;
-    margin-left: 2%;
-    margin-right: 5%;
+    margin: 0% 5% 0% 2%;
     padding-right: 2%;
     
 }
 
 .text_logo{
     width: 40vw;
-    margin-top: -3%;
-    margin-left: 0%;
+    margin: -3% 0%;
     color: #ffffff;
-    font-size: 2rem;
+    font-size: 2vw;
     /* background-color: red; */
   
     
