--- a/components/footer/css/content.module.css
+++ b/components/footer/css/content.module.css
@@ -15,11 +15,29 @@
       margin-left: 5%;
       display: flex;
       align-items: center;
-      /* background-color: red;  */
+      justify-content: flex-start; 
+
+       /* background-color: grey; */
       
   
   }
 
+  .link_insta{
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    margin-right: 5%
+    /* background-color: blue; */
+  }
+
+  .link_email{
+    align-items: center;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    /* background-color: red;   */
+  }
 
 
   @media (max-width: 880px){
@@ -54,6 +72,13 @@
 
   @media (max-width: 450px){
     .info{
-      display: none;
+      justify-content: space-evenly;
+      align-items: center;
+      margin: -15% 0% 0% -5%;
     }
+
+    
+
   } 
+
+ 
