ajuste nas cores

--- a/components/Nossas_EJs/EJ/ej.module.css
+++ b/components/Nossas_EJs/EJ/ej.module.css
@@ -13,13 +13,13 @@
 
 .box_ej:hover {
     cursor: pointer;
-    background-color: #b00909;
+    background-color: #820101;
     transform: scale(1.02);
 }
 
 .box_ej:hover h2{
   
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 
