--- a/components/Nossas_EJs/EJ/ej.module.css
+++ b/components/Nossas_EJs/EJ/ej.module.css
@@ -17,11 +17,6 @@
     transform: scale(1.02);
 }
 
-.box_ej:hover h2{
-  
-    /* font-weight: bold; */
-}
-
 
 
 
@@ -29,5 +24,33 @@
     color: #FFFFFF;
     font-size: 1.5vw;
     font-weight: normal;
+}
+
+
+
+
+@media (max-width: 1200px){
+    .box_ej{
+        width: 20vw;
+        height: 18vw;
+    }
+
+    .box_ej h2{
+        font-size: 1.5rem;
+    }
+}
+
+@media (max-width: 900px) {
+    .box_ej{
+        width: 25vw;
+        height: 23vw;
+    }
+}
+
+@media (max-width:500px) {
+    .box_ej{
+        width: 100%;
+        height: 300px;
+    }
 }
 
