--- a/components/Nossas_EJs/ejs.module.css
+++ b/components/Nossas_EJs/ejs.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 2% 2%;
-    background-color: #EEEEEE;
+    background-color: #ffdedede;
     font-family: sans-serif;
 }
 
@@ -37,6 +37,19 @@
     font-size: 1.75rem;
     text-transform: uppercase;
     padding: 10px 20px;
-
     
+}
+
+.container button:hover{
+    cursor: pointer;
+    transform: scale(1.02);
+}
+
+
+@media (max-width: 1200px) {
+    .container__EJs{
+        gap: 35px;
+        margin: 0% 15%;
+        justify-content: space-evenly;
+    }
 }
