--- a/components/Nossas_EJs/ejs.module.css
+++ b/components/Nossas_EJs/ejs.module.css
@@ -18,7 +18,9 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    /* align-items: center; */
+    gap: 6vw;
     margin: 0% 20%;
     /* background-color: black; */
 }
