--- a/components/Contatos/contato.module.css
+++ b/components/Contatos/contato.module.css
@@ -1,86 +1,7 @@
-/* .container {
-  min-height: 100vh;
-  background-color: #dddddd;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  align-content: space-between;
-  justify-content: space-between;
-  align-items: stretch;
-  font-family: "Inter";
-}
-.contact_text {
-  width: 40%;
-  height: auto;
-  padding: 2em 0em 0em 6em;
-}
-.h1 {
-  font-size: 2.67em;
-  color: #a83c3c;
-}
-.h3 {
-  width: 100%;
-  height: 100%;
-  padding-top: 0.18em;
-  font-size: 1.67em;
-  color: #000000;
-  line-height: 1.23em;
-  text-align: justify;
-}
-.contact_forms {
-  width: 50%;
-}
-.form {
-  margin-top: 6em;
-  line-height: 3;
-  width: 100%;
-  height: 35%;
-}
-.input {
-  width: 38.5%;
-  height: 24%;
-  border-radius: 2em;
-  padding: 0.8em;
-  border: 1px solid black;
-  background-color: #e282975b;
-  margin-right: 0.8em;
-}
-.assunto {
-  width: 79%;
-  height: 24%;
-  border-radius: 2em;
-  padding: 0.8em;
-  border: 1px solid black;
-  background-color: #e282975b;
-}
 
-.textarea {
-  border-radius: 1em;
-  padding: 0.6em;
-  width: 79%;
-  border: 1px solid black;
-  background-color: #e282975b;
-  margin-top: 0.46em;
-  font-size: 1em;
-}
-.btn_submit {
-  width: 79.4%;
-  padding: 0.7em;
-  background-color: #b44059c7;
-  color: #ffffff;
-  font-family: Inter;
-  font-size: 1em;
-  font-weight: 700;
-  line-height: 0.12em;
-
-  text-align: center;
-  cursor: pointer;
-  border-radius: 2em;
-}
- */
 
  .container {
-  min-height: 100vh;
+  min-height: 60vh;
   background-color: #DDDDDD;
   display: flex;
   flex-direction: row;
@@ -88,52 +9,64 @@
   align-content: space-around;
   justify-content: space-evenly;
   align-items: stretch;
-  font-family: 'Inter';
+  font-family:sans-serif;
  
 }
 .contact_text{
   
     width: 40%;
     height: auto;
-    padding: 6% 0% 0% 10%;
+    padding: 0% 0% 0% 4%;
+    margin-top: -2em;
 
 
 }
 .h1{
-    font-size: 3em;
+    font-size: 2.5em;
     color: #A83C3C;
 }
 .h3{
     /* width:  80%; */
     
     padding-top: 0.2em;
-    font-size: 1.4em;
+    font-size: 1.1em;
     color: #000000;
     line-height: 1.6em;
     max-width: 100%;
     inline-size: 85%;
     overflow-wrap: break-word;
+    text-align: justify;
 }
+
+/* .imgArrow{
+  
+    color: black;
+    width: 16px;
+    height: 16px;     
+  
+} */
 .contact_forms{
   
-    width: 44%;
+    width: 50%;
+    /* margin-top: 0.8em;   */
    
 }
 .form{
-    margin-top: 27%;
+    /* margin-top: 25%; */
     line-height:3;
     width: 100%;
-    height: 35%;
+    height: 70%;
     
     
 
 }
 .input{
     width: 39.5%;
-    height: 20%;
-    border-radius: 15px;
+    /* height: 20%; */
+    height: auto;
+    border-radius: 10px;
     padding: 7px;
-    border: 1px solid black;
+    border: 1px solid transparent;
     background-color: #e282975b;
     margin-right: 1%;
    
@@ -141,19 +74,21 @@
 }
 .assunto{
     width: 80%;
-    height: 20%;
-    border-radius: 15px;
+    /* height: 20%; */
+    height: auto;
+
+    border-radius: 10px;
     padding: 7px;
-    border: 1px solid black;
+    border: 1px solid transparent;
     background-color: #e282975b;
 }
 
 .textarea{
-    border-radius: 15px;
+    border-radius: 10px;
     padding: 4px;
     width: 80%;
     height: 55%;
-    border: 1px solid black;
+    border: 1px solid transparent;
     background-color: #e282975b;
     margin-top: 7px;
     font-size: 12pt;
@@ -162,7 +97,8 @@
 .btn_submit{
     width: 80%;   
     padding: 1.2%;
-    background-color: #b44059c7;
+    /* background-color: #b44059c7; */
+    background-color: rgba(180, 64, 89, 0.78);
     color: #FFFFFF;
     font-family: Inter;
     font-size: 1em;
@@ -172,7 +108,8 @@
     text-align: center;
     cursor: pointer;
     border-radius: 10px;
-    
+    margin-top: 20px;
+    border: 1px solid transparent;
 
 }
   
@@ -180,8 +117,8 @@
 @media (max-width: 850px) 
 {
   .contact_text{
-  margin-left: -7em;
-  width: 80%;
+  /* margin-left: -7em; */
+  width: 50%;
   height: auto;
   
 
@@ -192,10 +129,10 @@
     
 }
  .contact_forms{
-  
-  width: 100%;
-  margin-top: -6em;
-  margin-left: 4em;
+/*   
+  width: 100%; */
+  margin-top: 2em;
+  /* margin-left: 4em; */
  
 }
  .form{
@@ -207,13 +144,13 @@
  }
 
 }
-@media (max-width: 550px)
+@media (max-width: 650px)
 {
   .contact_text{
-  
-  width: 80%;
+  margin-top: 1em;
+  width: 100%;
   height: auto;
-  margin-left: -1em;
+  margin-left: 1em;
   margin-bottom: 1em;
 
 }
@@ -222,8 +159,17 @@
   overflow-wrap: break-word;
     
 }
+.contact_forms{
+    
+    width: 100%;
+    margin-top: 2em;
+    margin-left: 4em;
+}
+.input {
+  height: auto;
 }
 
+}
 @media (max-width: 475px) {
   .contact-text{
   
