--- a/components/Header/styles.module.css
+++ b/components/Header/styles.module.css
@@ -1,7 +1,7 @@
 .header{
-    background-color: black;
+    background-color: FFFFFF;
     width: 100%;
-    height: 20vh;
+    height: fit-content;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -10,8 +10,10 @@
 
 .logo{
     position: relative;
-    width: 300px;
-    height: 80px;
+    display: flex;
+    width: 20vw;
+    height: 5vw;
+
     /* background: white; */
 }
 
@@ -24,9 +26,53 @@
 
 }
 
+
 .header nav a{
     color: #4C9ABB;
-    font-size: clamp(1.25rem, 1.5rem, 2rem);
+    font-size: 1.5rem;
     margin-left: 2%;
     text-transform: uppercase;
+
+}
+
+.header nav a:hover {
+    color: #A83C3C;
+    text-decoration-line: overline;
+    transform: scale(1.01);
+    cursor: pointer;
+}
+
+
+.barra{
+    font-size: 1.5rem;
+    margin-left: 2%;
+    color: #CDCDCD;
+}
+@media (max-width: 1100px){
+    .header nav a{
+        font-size: 1.1rem;
+    }
+    
+    .logo{
+        width: 200px;
+        height: 50px;
+    }
+}
+
+@media (max-width: 840px){
+    .header nav a{
+        display: none;
+        /* background-color: red; */
+    }
+  .header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+  }
+
+  .barra{
+    display: none;
+  }
 }
