--- a/components/MEJ/style.module.css
+++ b/components/MEJ/style.module.css
@@ -1,12 +1,40 @@
 .container{
     display: flex;
+    flex-direction: column;
     background-color: #FFFFFF;
     padding: 2% 2%;
 }
 
 .container h1{
+    width: 100%;
     color: #A83C3C;
     font-size: clamp(1.5rem, 3rem, 5rem);
     font-weight: bold;
-    margin-bottom: 5%;
+    margin-bottom: 3%,
+}
+
+.content_container{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.img_nej{
+    position: relative;
+    width: fit-content;
+    display: flex;
+    margin-right: 6%;
+    /* background-color: black; */
+}
+
+.infos{
+    display: flex;
+    flex-direction: row;
+    gap: 10vw;
+}
+
+.container_infos{
+    display: flex;
+    flex-direction: column;
 }
