--- a/components/MEJ/style.module.css
+++ b/components/MEJ/style.module.css
@@ -38,3 +38,17 @@
     display: flex;
     flex-direction: column;
 }
+
+@media (max-width: 1500px){
+    .content_container{
+        flex-direction: column;
+    }
+}
+
+@media (max-width:780px){
+    .infos{
+        flex-direction: column;  
+        gap: 0vw;
+        margin-bottom: 10%;
+    }
+}
