--- a/components/MEJ/text_box/style.module.css
+++ b/components/MEJ/text_box/style.module.css
@@ -19,7 +19,11 @@
     font-size: 30px;
 }
 
-
+@media (max-width: 780px){
+    .text_box h1{
+        text-align: center;
+    }
+}
 @media (max-width: 420px){
     .text_box{
         width: 100%;
