--- a/components/footer/css/boxes.module.css
+++ b/components/footer/css/boxes.module.css
@@ -1,8 +1,7 @@
 
 .box{
-
-    width: 100vw;
-    height: 40vh;
+    width: 100%;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -11,7 +10,6 @@
 
 
 .box_content{
-  width: 100vw;
   height: 32vh;
   display: flex;
   flex-direction: row;
@@ -19,7 +17,7 @@
   align-items: center;
   position: relative;
   margin-top: -2%;
-  /* background-color: aqua; */
+
      
 }
 
