--- a/components/footer/css/boxes.module.css
+++ b/components/footer/css/boxes.module.css
@@ -1,7 +1,7 @@
 
 .box{
     width: 100%;
-    height: fit-content;
+    height: 46vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
