--- a/components/Header/styles.module.css
+++ b/components/Header/styles.module.css
@@ -1,5 +1,5 @@
 .header{
-    background-color: FFFFFF;
+    background-color: #FFFFFF;
     width: 100%;
     height: fit-content;
     display: flex;
@@ -48,6 +48,8 @@
     margin-left: 2%;
     color: #CDCDCD;
 }
+
+
 @media (max-width: 1100px){
     .header nav a{
         font-size: 1.1rem;
