--- a/components/Sobre/BoxSobre/styles.module.css
+++ b/components/Sobre/BoxSobre/styles.module.css
@@ -1,10 +1,3 @@
-.box{
-    width: 100vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-   
-}
 
 .container{
     width: 30vh;
@@ -33,11 +26,15 @@
 
 }
 
+
 @media (max-width: 990px){
-    .box{
-        display: flex;
-        flex-direction: column;
-        background-color: black;
+    .container{
+        margin-bottom: 20%;
     }
 }
 
+@media (max-width: 300px){
+    .container span {
+        font-size: 30px
+    }
+}
