--- a/components/Contatos/contato.module.css
+++ b/components/Contatos/contato.module.css
@@ -12,13 +12,21 @@
   font-family:sans-serif;
  
 }
+
+.container span{
+    font-size: 3rem;
+    font-weight: bold;
+    color: #3f819d;
+    margin: 0% 0.5vw 0% -10%;
+    text-shadow: 0px 2px 10px #4C9ABB;
+  
+}
 .contact_text{
   
     width: 40%;
     height: auto;
     padding: 0% 0% 0% 4%;
     margin-top: -2em;
-
 
 }
 .h1{
@@ -29,7 +37,7 @@
     /* width:  80%; */
     
     padding-top: 0.2em;
-    font-size: 1.1em;
+    font-size: 1.5em;
     color: #000000;
     line-height: 1.6em;
     max-width: 100%;
@@ -50,52 +58,56 @@
     width: 50%;
     /* margin-top: 0.8em;   */
    
+   
 }
 .form{
     /* margin-top: 25%; */
     line-height:3;
     width: 100%;
-    height: 70%;
     
-    
-
 }
 .input{
     width: 39.5%;
-    /* height: 20%; */
-    height: auto;
-    border-radius: 10px;
-    padding: 7px;
+    padding: 0% 2% 0% 2%;
+    height: 45px;
+    font-weight: bold;
+    border-radius: 15px;
     border: 1px solid transparent;
     background-color: #e282975b;
-    margin-right: 1%;
-   
+    font-size: 17px;
+    margin: 0% 3% 3% 0%;
+    box-shadow: 2px 2px 5px gray;
 
 }
 .assunto{
-    width: 80%;
-    /* height: 20%; */
-    height: auto;
-
-    border-radius: 10px;
-    padding: 7px;
+    width: 81.9%;
+    height: 45px;
+    border-radius: 15px;
+    padding: 0% 2% 0% 2%;
+    margin-bottom: 2%;
     border: 1px solid transparent;
     background-color: #e282975b;
-}
+    font-size: 17px;
+    box-shadow: 2px 2px 5px gray;
+  }
 
-.textarea{
+.textareas{
     border-radius: 10px;
-    padding: 4px;
-    width: 80%;
-    height: 55%;
+    display: flex;
+    width: 81.9%;
+    padding: 1% 2% 5% 2%;
+    border-radius: 15px;
+    font-weight: bold;
     border: 1px solid transparent;
     background-color: #e282975b;
     margin-top: 7px;
-    font-size: 12pt;
-    
-}
+    font-size: 20px;
+    font-weight: bold;
+    box-shadow: 2px 2px 5px gray;
+      
+    }
 .btn_submit{
-    width: 80%;   
+    width: 81.9%;
     padding: 1.2%;
     /* background-color: #b44059c7; */
     background-color: rgba(180, 64, 89, 0.78);
@@ -122,6 +134,10 @@
   height: auto;
   
 
+}
+
+.container span {
+  display: none;
 }
 .h3{
   inline-size: 90%;
@@ -165,9 +181,8 @@
     margin-top: 2em;
     margin-left: 4em;
 }
-.input {
-  height: auto;
-}
+
+
 
 }
 @media (max-width: 475px) {
