ajustes na main

--- a/components/Nossas_EJs/ejs.module.css
+++ b/components/Nossas_EJs/ejs.module.css
@@ -22,7 +22,7 @@
     justify-content: flex-start;
     /* align-items: center; */
     gap: 6vw;
-    margin: 0% 20%;
+    padding: 2% 5%;
     /* background-color: black; */
 }
 
