--- a/components/Nossas_EJs/ejs.module.css
+++ b/components/Nossas_EJs/ejs.module.css
@@ -22,6 +22,7 @@
     justify-content: flex-start;
     /* align-items: center; */
     gap: 6vw;
+    padding: 5%;
     margin: 0% 20%;
     /* background-color: black; */
 }
