--- a/components/MEJ/style.module.css
+++ b/components/MEJ/style.module.css
@@ -5,20 +5,14 @@
     padding: 2% 2%;
 }
 
-.container h1{
-    width: 100%;
-    color: #A83C3C;
-    font-size: clamp(1.5rem, 3rem, 5rem);
-    font-weight: bold;
-    margin-bottom: 3%,
-}
+
 
 .content_container{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
-    
+    margin-right: 5%;
 }
 
 .img_nej{
