--- a/components/Nossas_EJs/ejs.module.css
+++ b/components/Nossas_EJs/ejs.module.css
@@ -6,24 +6,18 @@
     font-family: sans-serif;
 }
 
-.container span{
-    color: #A83C3C;
-    font-size: clamp(1.5rem, 3rem, 5rem);
-    font-weight: bold;
-    margin-bottom: 5%;
-}
-
 .container__EJs{
     width: 70%;
     height: fit-content;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: space-between;
+    align-content: flex-start;
     /* align-items: center; */
     gap: 6vw;
-    padding: 5%;
-    margin: 0% 20%;
+    padding: 6%;
+    margin: -5% 0%;
     /* background-color: black; */
 }
 
