--- a/components/carousel_eventos/title/title.module.css
+++ b/components/carousel_eventos/title/title.module.css
@@ -4,7 +4,13 @@
     padding: 5% 0 7% 10%;
     
 
-    font-size: 4vw;
+    font-size: clamp(3vw, 4vw, 5vw);
     font-weight: bold;
     
+}
+
+@media (max-width: 450px){
+    .title{
+        font-size: 40px;
+    }
 }
