--- a/components/Banner/styles.module.css
+++ b/components/Banner/styles.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 70vw;
     padding: 2%;
     position: relative;
 }
