--- a/pages/nossas-ejs/style.module.css
+++ b/pages/nossas-ejs/style.module.css
@@ -1,21 +1,45 @@
 .pageContainer{
     margin: 0 auto;
     gap: 4px;
-    padding: 60px 20px;
+    padding: 30px 20px;
     display: flex;
     flex-direction: column;
 }
 
+.searchBarContainer{
+    align-self: flex-end;
+    position: relative;
+}
+
 .searchBar{
-    background-color: blue;
+    position: relative;
+    background-color: white;
     width: 300px;
     height: 50px;
     border-radius: 400px;
-    align-self: flex-end;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 25px;
+    padding: 0 50px 0 20px;
+    border: none;
+}
+
+.searchBar::placeholder{
+    color: #D6D6D6;
+    font-size: 1.1em;
+}
+
+.searchBarIcon{
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    right: 15px;
+    top: calc(50% - 15px);
+    background-image: url("/posts/eventos/icone-pesquisa.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 22px;
+    opacity: 0.1;
 }
 
 .activeTagsContainer{
@@ -29,11 +53,12 @@
     text-align: center;
     gap: 1px;
     flex-wrap: wrap;
+    margin-top: 20px;
 }
 
 .activeTag{
     height: 100%;
-    padding: 3px 20px 3px 0;
+    padding: 3px 0;
     color: #868686;
     width: 150px;
     margin-top: 10px;
@@ -51,7 +76,7 @@
 
 .activeButton{
     display: flex;
-    justify-content: center;;
+    justify-content: center;
     flex-direction: row;
     gap: 1px;
     flex-wrap: wrap;
@@ -67,6 +92,7 @@
     align-items: center;
     color: white;
     border: none;
+    cursor: pointer;
 }
 
 .removeTagButton{
@@ -102,7 +128,7 @@
 }
 
 @media (max-width: 600px){  
-    .searchBar{
+    .searchBarContainer{
         align-self: center;
     }
 
