--- a/pages/nossas-ejs/style.module.css
+++ b/pages/nossas-ejs/style.module.css
@@ -14,19 +14,20 @@
 .searchBar{
     position: relative;
     background-color: white;
-    width: 300px;
-    height: 50px;
+    width: 315px;
+    height: 60px;
     border-radius: 400px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 50px 0 20px;
     border: none;
+    font-size: 1rem;
 }
 
 .searchBar::placeholder{
     color: #D6D6D6;
-    font-size: 1.1em;
+    font-size: 0.98rem;
 }
 
 .searchBarIcon{
@@ -38,19 +39,24 @@
     background-image: url("/posts/eventos/icone-pesquisa.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 22px;
+    background-size: 26px;
     opacity: 0.1;
+    transition: 0.6s all;
 }
+
+.searchBar:focus + .searchBarIcon{
+    opacity: 1;   
+}   
 
 .activeTagsContainer{
     min-height: 40px;
     height: fit-content;
-    display: flex;
     gap: 10px;
-    padding: 2px;
+    padding: 2px 2px 2px 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-content: center;
-    flex-direction: row;
-    text-align: center;
+    align-items: center;
     gap: 1px;
     flex-wrap: wrap;
     margin-top: 20px;
@@ -83,7 +89,7 @@
 }
 
 .tagButton{
-    width: 150px;
+    width: 200px;
     height: 35px;
     border-radius: 5px;
     background-color: #A83C3C;
@@ -93,6 +99,7 @@
     color: white;
     border: none;
     cursor: pointer;
+    font-size: 0.95rem;
 }
 
 .removeTagButton{
@@ -131,14 +138,32 @@
     .searchBarContainer{
         align-self: center;
     }
-
+    
+    .activeTagsContainer,
     .ejsContainerUm{
         grid-template-columns: 1fr 1fr 1fr;
     }
 }
 
 @media (max-width: 475px){  
+    .activeTagsContainer,
     .ejsContainerUm{
         grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media (max-width: 425px){  
+    .activeTagsContainer,
+    .ejsContainerUm{
+        grid-template-columns: 1fr;
+    }
+
+    .activeTagsContainer{
+        padding: 2px;
+    }
+
+    .activeTagsContainer *{
+        justify-self: center;
+        text-align: center;
     }
 }
