--- a/components/Sobre/Descricao/style.module.css
+++ b/components/Sobre/Descricao/style.module.css
@@ -1,7 +1,25 @@
 .container{
     width: 100%;
-    height: 30vw;
+    height: fit-content;
     display: flex;
     flex-direction: row;
-    padding: 2%;
+    padding: 3%;
+    align-items: center;
+    justify-content: center;
+}
+
+.container p {
+    font-size: 1.7vw;
+    width: 50%;
+    line-height: 2.5vw;
+    text-align: justify;
+    font-family: sans-serif;
+    /* font-weight: bold; */
+}
+
+.img{ 
+    position: relative;
+    width: 22vw;
+    height: 30vw;
+    margin-right: 3%;
 }
