--- a/components/Sliders/EventsSlider/style.module.css
+++ b/components/Sliders/EventsSlider/style.module.css
@@ -5,9 +5,9 @@
 
 .sliderItem{
     display: block;
-    min-height: 150px;
+    min-height: 200px;
     min-width: 130px;
-    max-width: 250px;
+    max-width: 190px;
     background: blue;
     transition: all 0.6s;
     margin: 0 auto;
@@ -43,6 +43,9 @@
     background-color: transparent;
     border: none;
     cursor: pointer;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: url("/assets/slim-arrow.svg");
     transition: 0.6s all;
 }
 
@@ -51,9 +54,10 @@
 }
 
 .owlNext{
-    right: calc(-80vw - 35px);
+    right: calc(-80vw - 55px);
 }
 
 .owlPrev{
-    left: -35px;
+    transform: rotate(-180deg); 
+    left: -55px;
 }
