ajuste final no header

--- a/components/Header/styles.module.css
+++ b/components/Header/styles.module.css
@@ -6,6 +6,7 @@
     align-items: center;
     justify-content: space-between;
     padding: 2% 2% 2% 2%;
+    
 }
 
 .logo{
@@ -13,41 +14,55 @@
     display: flex;
     width: 20vw;
     height: 5vw;
-
+    
     /* background: white; */
 }
 
-.header nav {
+.header ul {
     display: flex;
-    width: 100%;
-    flex-direction: row;
-    justify-content: flex-end;
-    /* background-color: red; */
+    width: 70%;
+    height: fit-content;
+    padding: 0%;
+    list-style-type: none;
+    align-items: center;
+    justify-content: space-evenly;
+    /* background-color: black; */
 
 }
 
-
-.header nav a{
+.header ul li{
     color: #4C9ABB;
+    display: flex;
     font-size: 1.5vw;
-    margin-left: 2%;
+    justify-content: space-between;
+  
     text-transform: uppercase;
-
-}
-
-.header nav a:hover {
-    color: #A83C3C;
-    text-decoration-line: overline;
-    transform: scale(1.01);
-    cursor: pointer;
 }
 
 
-.barra{
-    font-size: 1.5rem;
-    margin-left: 2%;
-    color: #CDCDCD;
+
+.animatedHover{
+    display: inline-block;
+    position: relative;
+    padding-bottom: 0.25rem;
 }
+.animatedHover::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 3px;
+    transition: 0.25s ease-out;
+    background-color: #346d86;
+    background-image: linear-gradient(to right, #4C9ABB , rgb(240, 240, 240) );
+}
+
+.animatedHover:hover::before{
+    width: 100%;
+}
+
+
 
 
 @media (max-width: 1100px){
@@ -60,7 +75,7 @@
 }
 
 @media (max-width: 840px){
-    .header nav a{
+    .header ul a{
         display: none;
         /* background-color: red; */
     }
