--- a/components/Sobre/Descricao/style.module.css
+++ b/components/Sobre/Descricao/style.module.css
@@ -6,8 +6,8 @@
     padding: 3%;
     align-items: center;
     justify-content: center;
+    margin-bottom: 4%;
 }
-
 .container p {
     font-size: 1.7vw;
     width: 50%;
