--- a/components/Sobre/styles.module.css
+++ b/components/Sobre/styles.module.css
@@ -5,6 +5,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    margin-top: -8%;
     /* background-color: black; */
 }
 
