--- a/components/Sliders/EventsSlider/style.module.css
+++ b/components/Sliders/EventsSlider/style.module.css
@@ -8,21 +8,16 @@
     min-height: 200px;
     min-width: 130px;
     max-width: 190px;
-    background: blue;
     transition: all 0.6s;
     margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
-}
-
-.sliderItem:hover{
-    box-shadow: 0px 0px 20px rgba(0,0,0,.6); 
+    position: relative;
 }
 
 .slider{
-    background-color: antiquewhite;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -47,10 +42,6 @@
     background-repeat: no-repeat;
     background-image: url("/assets/slim-arrow.svg");
     transition: 0.6s all;
-}
-
-.owlNext:hover, .owlPrev:hover{
-    transform: scale(1.1);
 }
 
 .owlNext{
