--- a/components/Sliders/PartnersSlider/style.module.css
+++ b/components/Sliders/PartnersSlider/style.module.css
@@ -5,24 +5,25 @@
 
 .sliderItem{
     display: block;
-    min-height: 150px;
+    height: 150px;
     min-width: 130px;
     max-width: 250px;
-    background: blue;
     transition: all 0.6s;
-    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
+    position: relative;
+    padding: 10px;
+    margin: 10px auto;
+    overflow: hidden;
 }
 
 .sliderItem:hover{
-    box-shadow: 0px 0px 20px rgba(0,0,0,.6); 
+    box-shadow: 0px 0px 20px rgba(0,0,0,.2); 
 }
 
 .slider{
-    background-color: antiquewhite;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -32,13 +33,13 @@
     position: absolute;
     justify-content: space-between;
     display: flex;
-    top: calc(50% - 30px);
+    top: calc(50% - 2.5vh);
 }
 
 .owlNext, .owlPrev{
     position: absolute;
-    height: 60px;
-    width: 30px;
+    height: 5vh;
+    width: 5vw;
     font-size: 2rem;
     background-color: transparent;
     border: none;
@@ -54,10 +55,10 @@
 }
 
 .owlNext{
-    right: calc(-80vw - 55px);
+    right: calc(-80vw - 3.5vw - 15px);
 }
 
 .owlPrev{
     transform: rotate(-180deg); 
-    left: -55px;
+    left: calc(-3.5vw - 15px);
 }
