--- a/pages/eventos/style.module.css
+++ b/pages/eventos/style.module.css
@@ -1,5 +1,6 @@
 .container{ 
     width: 100%;
+    height: 100%;
     padding: 0% 5% 5% 5%;
    
     
@@ -66,5 +67,9 @@
     margin: 0%;
     /* background-color: black; */
    
+}
+
+.image:hover{
+    transform: scale(1.06);
 }
 
