--- a/pages/eventos/eventos.module.css
+++ b/pages/eventos/eventos.module.css
@@ -33,6 +33,34 @@
     height: fit-content;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
+
+.content{
+    width: 60vw;
+    margin: 0% 10%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    
+}
+.barra{
+    width: 20vw;
+    height: 5px;
+    box-shadow: 2px 2px 10px grey;
+    display: flex;
+    justify-content: flex-end;
+    background-color: #4C9ABB;
+    margin-bottom: 4%;
+}
+
+.content p{
+    font-family: sans-serif;
+    font-size: clamp(1rem, 2.5vw, 2rem) ;
+    text-align: justify;
+    
+    /* background-color: black; */
+}
+
+
 
