--- a/pages/eventos/style.module.css
+++ b/pages/eventos/style.module.css
@@ -38,14 +38,13 @@
 
 .imageContent{
     width: 20vw;
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     
    
 }
 .imageContent p{
-    width: 100%;
+    width: 20vw;
     line-height: 120%;
     font-size: 1vw;
     text-align: justify;
@@ -54,7 +53,7 @@
     padding: 0 3% 0% 3%;
     margin-bottom: 15%; 
     opacity: 70%;
-  
+    /* background-color: black; */
     
 }
 
@@ -63,7 +62,7 @@
     
     position: relative;
     width: 20vw;
-    height: 15vw;
+    height: 20vw;
     margin: 0%;
     /* background-color: black; */
    
