--- a/pages/eventos/eventos.module.css
+++ b/pages/eventos/eventos.module.css
@@ -62,5 +62,21 @@
     /* background-color: black; */
 }
 
-
+.condicional{
+    width: 100%;
+    
+ 
+    font-style: italic;
+    position: absolute;
+    height: fit-content;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    opacity: 30%;
+    font-weight: bold;
+    text-shadow: 0px 6px 8px black;
+    color: black;
+    margin-top: 7%;
+    /* background-color: #4C9ABB; */
+}
 
