enderecamento do logo e alteracoes as ejs

--- a/components/Nossas_EJs/ejs.module.css
+++ b/components/Nossas_EJs/ejs.module.css
@@ -26,9 +26,10 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     /* align-items: center; */
     gap: 6vw;
+
     margin: 0% 20%;
     
 }
