--- a/components/Carrousel/BlogTemplate/style.module.css
+++ b/components/Carrousel/BlogTemplate/style.module.css
@@ -1,29 +1,39 @@
 .container{
-    width: 20vw;
-    height: 30vw;
+    width: clamp(10rem ,20vw, 25rem);
+    height: clamp(15rem, 30vw, 35rem);
     display: flex;
-    align-items: center;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: #FFFFFF;
     box-shadow: 4px 7px 2px #B25468;
     border-radius: 20px;
     margin: 10% 0% 10% 0%;
-    padding: 2%; 
+    padding: 0% 5% 0% 5%; 
 }
 
 .img{
     position: relative;
-    width: 10vw;
-    height: 10vw;
-    margin-bottom: 15%;
+    width: 15vw;
+    height: 15vw;
+    margin-bottom: 10%;
     /* background-color: black; */
 }
 
 .container h2{
-    font-size: 1.5vw;
+    text-align: center;
+    font-size: clamp( 1rem, 1.25vw, 2rem);
     margin-bottom: 10%;
+    /* background-color: rebeccapurple; */
 }
 
 .container span{
-    font-size: 1vw;
+    margin-top: -5%;
+    text-align: justify;
+    overflow-wrap: break-word;
+    font-size: clamp( 0.8rem, 1vw, 2rem);
+}
+
+.data_component{
+
 }
