--- a/components/Carrousel/BlogTemplate/style.module.css
+++ b/components/Carrousel/BlogTemplate/style.module.css
@@ -2,21 +2,28 @@
     width: clamp(10rem ,20vw, 25rem);
     height: clamp(15rem, 30vw, 35rem);
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-color: #FFFFFF;
     box-shadow: 4px 7px 2px #B25468;
     border-radius: 20px;
     margin: 10% 0% 10% 0%;
     padding: 0% 5% 0% 5%; 
 }
-
+.subcontainer{
+   width: 100%;
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+   
+   align-items: center;
+   /* background-color: black; */
+    
+}
 .img{
     position: relative;
     width: 15vw;
     height: 15vw;
-    margin-bottom: 10%;
+    margin: 10%;
+ 
     /* background-color: black; */
 }
 
@@ -27,13 +34,28 @@
     /* background-color: rebeccapurple; */
 }
 
-.container span{
+.subtitle{
     margin-top: -5%;
     text-align: justify;
     overflow-wrap: break-word;
     font-size: clamp( 0.8rem, 1vw, 2rem);
 }
 
-.data_component{
 
+.data{
+    display: flex;
+    margin-top: 10%;
+    color: #AFACAC;
+    text-decoration: underline;
+    /* background-color: black; */
+    align-items: center;
+    font-size: 1vw;
+    
+}
+
+
+.container:hover{
+    cursor: pointer;
+    box-shadow: 4px 7px 2px #4C9ABB;
+    
 }
