--- a/pages/blog/style.module.css
+++ b/pages/blog/style.module.css
@@ -6,24 +6,23 @@
     width: clamp(200px, 20vw, 30rem);
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin-bottom: 8%;
-  
+ 
    
 }
 
 .blog_component span{
     width: 100%;
-
+   
     font-weight: bold;
     font-family: sans-serif;
     text-align: justify;
     box-sizing: content-box;
-    margin-top: 5%;
+    margin: 5% 0% 0% 2%;
     font-size: clamp(10px, 1vw, 100px);
     opacity: 70%;
     overflow-wrap: break-word;
-    /* background-color: red; */
+    
    
     
 }
@@ -43,4 +42,13 @@
    border-radius: 15% 5%;
    border: 3px solid rgb(250, 250, 250);
    box-shadow: 6px 6px 8px rgb(148, 148, 148);
+}
+
+.blog_component:hover{
+    transform: scale(0.95);
+    cursor: pointer;
+}
+
+.image:hover{
+    border: 3px solid #4C9ABB;
 }
