--- a/components/Events/events.module.css
+++ b/components/Events/events.module.css
@@ -14,4 +14,5 @@
     box-shadow: 0px 10px 4px rgba(206, 36, 71, 0.35);
     border-radius: 20px;
     font-size: clamp(1rem, 2vw, 1.3rem);
+    text-decoration: none;
 }
