--- a/components/MVV/styles.module.css
+++ b/components/MVV/styles.module.css
@@ -1,7 +1,7 @@
 .container{
     width: 100%;
     height: fit-content;
-    padding: 30px 0;
+    padding: 0 10px 90px 10px;
     margin: 0 auto;
     background-color: #eeeeee;
     display: flex;
@@ -11,12 +11,14 @@
 }
 
 .optionsContainer{
+    width: 100%;
     height: 430px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 30px;
     max-width: 1400px;
+    /* background-color: red; */
 }
 
 .option{
@@ -97,7 +99,6 @@
 
 .mvvContainer{
     max-width: 1400px;
-    min-height: 600px;
     gap: 20px;
     padding: 30px 0 0 0;
     display: flex;
@@ -111,7 +112,7 @@
     align-items: center;
     height: fit-content;
     min-height: 460px;
-    gap: 30px;
+    gap: 1vw;
     background-color: #4C9ABB;
     width: 100%;
     padding: 30px 0;
@@ -209,15 +210,18 @@
 @media (max-width: 630px){
     .mvv{
         flex-direction: column;
+        min-height: 0;
     }
 
     .mvv > .title{
         width: 80%;
-    }
+        height: 100px;
+    }       
 
     .mvv .content{
         width: 90%;
         display: flex;
+        min-height: 0;
         justify-content: center;
         align-items: center;
         font-size: clamp(1.5rem, 2.5vw, 2rem);
