--- a/components/Sliders/EventsSlider/style.module.css
+++ b/components/Sliders/EventsSlider/style.module.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
 }
 
+
 .sliderItem{
     display: block;
     min-height: 250px;
@@ -15,6 +16,7 @@
     align-items: center;
     color: white;
     position: relative;
+    text-decoration: none;
 }
 
 .slider{
@@ -42,6 +44,14 @@
     background-repeat: no-repeat;
     background-image: url("/assets/slim-arrow.svg");
     transition: 0.6s all;
+}
+
+.owlNext:hover{
+    transform: scale(1.1);
+}
+
+.owlPrev:hover{
+    transform: scale(1.1) rotate(-180deg);
 }
 
 .owlNext{
