--- a/components/Sliders/PartnersSlider/style.module.css
+++ b/components/Sliders/PartnersSlider/style.module.css
@@ -4,6 +4,7 @@
 }
 
 .sliderItem{
+    
     display: block;
     height: 150px;
     min-width: 130px;
@@ -50,8 +51,12 @@
     transition: 0.6s all;
 }
 
-.owlNext:hover, .owlPrev:hover{
+.owlNext:hover{
     transform: scale(1.1);
+}
+
+.owlPrev:hover{
+    transform: scale(1.1) rotate(-180deg); ;
 }
 
 .owlNext{
