--- a/components/Sobre/Descricao/style.module.css
+++ b/components/Sobre/Descricao/style.module.css
@@ -8,26 +8,72 @@
     align-items: center;
     justify-content: center;
     margin-bottom: 4%;
+    gap: 20px;
 }
+
 .container p {
     font-size: clamp(0.9rem, 2.5vw, 1.5rem);
-    width: 50%;
-    line-height: 2.5vw;
+    width: 60%;
+    line-height: 1.3;
     text-align: justify;
     font-family: sans-serif;
     /* font-weight: bold; */
 }
 
-@media (max-width: 500px){
-    .container p {
-        line-height: 5vw;
-        /* font-weight: bold; */
-    }
+.imgContainer{ 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 30%;
+    max-width: 300px;
+    height: 35vw;
+    max-height: 500px;
+    margin-right: 3%;
+    padding-bottom: 15px;
+    background-color: #009bbe;
+    border-radius: 20px;
 }
 
-.img{ 
-    position: relative;
-    width: 22vw;
-    height: 30vw;
-    margin-right: 3%;
+.imgContainer::after{ 
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    content: "";
+    top: calc(50% - 10px);
+    right: -10px;
+    transform: rotate(45deg);
+    background-color: #009bbe;
+}
+
+.img{
+    width: 80%;
+    max-width: 300px;
+}
+
+@media (max-width: 500px){
+    .container {
+        flex-direction: column;
+    }
+
+    .container p {
+        width: 80%;
+        /* font-weight: bold; */
+    }
+
+    .imgContainer{ 
+        width: 80%;
+        max-height: 180px;
+        height: 30vw;
+        padding-bottom: 0;
+    }
+    
+    .imgContainer::after{ 
+        right: calc(50% - 10px);
+        top: calc(100% - 10px);
+    }
+
+    .img{
+        width: 45%;
+    }
 }
