--- a/components/footer/css/boxes.module.css
+++ b/components/footer/css/boxes.module.css
@@ -5,7 +5,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: #777777;
+    
+}
+
+.box a{
+  text-decoration: none;
 }
 
 
@@ -13,7 +17,8 @@
   height: 32vh;
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-between;
+  gap: 4vw;
   align-items: center;
   position: relative;
   margin-top: -2%;
