--- a/pages/blog/blog.module.css
+++ b/pages/blog/blog.module.css
@@ -55,3 +55,46 @@
     height: 3px;
     background-color: #428299;
 }
+
+.text_container{
+    width: 100vw;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    padding: 5% 25% 5% 25%;
+    font-size: clamp(1.5rem, 1vw, 2.5rem);
+    text-align: justify;
+    
+}
+
+.continue_explorando{
+    width: 100%;
+    padding: 5%;
+    height: fit-content;
+    background-color: #428299;
+}
+
+.titleStyled{
+    width: fit-content;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    
+ 
+}
+
+.titleStyled h2 {
+    color: #FFFFFF;
+    font-weight: inherit;
+    font-size: clamp(1.5rem, 3vw, 5rem);
+}
+
+
+.titleStyled span{
+    width: 100%;
+    height: 3px;
+    background: rgb(0, 0, 0);
+    background: linear-gradient(90deg, rgb(0, 0, 0) 0%, rgba(0,0,0,1) 57%, rgba(66,130,153,1) 100%);
+    opacity: 50%;
+    margin: -8% 0% 0% 3%;
+}
