--- a/components/Carrousel/BlogTemplate/style.module.css
+++ b/components/Carrousel/BlogTemplate/style.module.css
@@ -7,15 +7,16 @@
     border-radius: 20px;
     margin: 10% 0% 10% 0%;
     padding: 0% 5% 0% 5%; 
+    
 }
 .subcontainer{
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
-   
+   justify-content: space-between;
    align-items: center;
-   /* background-color: black; */
+   
     
 }
 .img{
@@ -44,7 +45,7 @@
 
 .data{
     display: flex;
-    margin-top: 10%;
+    margin-bottom: 3%;
     color: #AFACAC;
     text-decoration: underline;
     /* background-color: black; */
