--- a/styles/404.module.css
+++ b/styles/404.module.css
@@ -2,19 +2,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: hidden;
 }
 .container{
     display: flex;
     justify-content: space-evenly;
+    flex-direction: column;
     align-items: center;
     width: 100%;
     height: 100vw;
     height: fit-content;
     background-color: #FFFFFF;
     padding: 10% 0% 5% 0%;
+    margin-top: -10%;
     
 }
-    
+
 .button{
     width:  250px;
     height: 60px;
@@ -23,11 +26,18 @@
     color: #FFFFFF;
     font-size: 20px;
     border: none;
-    margin-top: -5%;
+    margin: -5% 0px 20%;
     /* background-color: black; */
 }
 
 .button:hover{
     background-color: #6fc7ed;
     cursor: pointer;
+}
+
+
+@media (max-width: 250px){
+    .titulo{
+        display: none;
+    }
 }
