--- a/components/Nossas_EJs/EJ/ej.module.css
+++ b/components/Nossas_EJs/EJ/ej.module.css
@@ -2,6 +2,7 @@
     width: 15vw;
     height: 13vw;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     border: 2px solid red;  
