--- a/components/Sobre/Descricao/style.module.css
+++ b/components/Sobre/Descricao/style.module.css
@@ -1,79 +1,70 @@
 .container{
     width: 100%;
-    background-color: #FFF;
+    margin: 0 auto;
+    background-color: #A82A44;
     height: fit-content;
     display: flex;
     flex-direction: row;
-    padding: 3%;
     align-items: center;
     justify-content: center;
-    margin-bottom: 4%;
-    gap: 20px;
+    gap: 80px;
+    margin-top: 40px;
+    padding-bottom: 40px;
+}
+
+.wrapper{
+    max-width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    flex-direction: row;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+}
+
+@media (min-width: 1024px){
+    .container{
+        margin-top: 0;
+    }
 }
 
 .container p {
-    font-size: clamp(0.9rem, 2.5vw, 1.5rem);
-    width: 60%;
-    line-height: 1.3;
-    text-align: justify;
-    font-family: sans-serif;
-    /* font-weight: bold; */
-}
-
-.imgContainer{ 
+    font-size: clamp(1.15rem, 3.5vw, 1.6rem);
+    width: 90%;
     display: flex;
+    grid-column-start: 1;
+    grid-column-end: 3;
     justify-content: center;
     align-items: center;
-    position: relative;
-    width: 30%;
-    max-width: 300px;
-    height: 35vw;
-    max-height: 500px;
-    margin-right: 3%;
-    padding-bottom: 15px;
-    background-color: #009bbe;
-    border-radius: 20px;
+    padding: 60px 20px;
+    margin: 0 auto;
+    line-height: 1.5;
+    text-align: justify;
+    font-family: sans-serif;
+    color: #FFF;
 }
 
-.imgContainer::after{ 
-    position: absolute;
-    width: 20px;
-    height: 20px;
-    content: "";
-    top: calc(50% - 10px);
-    right: -10px;
-    transform: rotate(45deg);
-    background-color: #009bbe;
-}
+@media (max-width: 990px){
+    .wrapper{
+        max-width: 1200px;
+        width: 90vw;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr;
+    }
 
-.img{
-    width: 80%;
-    max-width: 300px;
-}
-
-@media (max-width: 500px){
     .container {
+        padding: 0 3% 20% 3%;
+        background-image: url("/assets/fundo-bolinhas.png");
+        background-repeat: repeat-x;
+        background-position: -12% bottom;
         flex-direction: column;
+        gap: 60px;
     }
 
     .container p {
-        width: 80%;
-        /* font-weight: bold; */
-    }
-
-    .imgContainer{ 
-        width: 80%;
-        max-height: 180px;
-        height: 30vw;
-        padding-bottom: 0;
-    }
-    
-    .imgContainer::after{ 
-        right: calc(50% - 10px);
-        top: calc(100% - 10px);
-    }
-
-    .img{
-        width: 45%;
+        font-size: clamp(1.15rem, 3.5vw, 1.6rem);
+        padding: 60px 0;
     }
 }
