--- a/components/Sobre/styles.module.css
+++ b/components/Sobre/styles.module.css
@@ -1,17 +1,33 @@
 .container{
     width: 100%;
     height: fit-content;
-    padding: 5% 2% 5% 2%;
     display: flex;
     align-items: center;
     justify-content: space-around;
     margin-top: -8%;
     /* background-color: black; */
+    flex-direction: column;    
 }
 
-@media (max-width: 990px){
+.adaptative{
+    width: 100%;
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    flex-direction: row;
+}
+
+@media (max-width: 768px){
     .container{
         display: flex;
-        flex-direction: column;    
+    }
+}
+
+@media (max-width: 1023px) {
+    .adaptative{
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        grid-template-columns: 1fr;
     }
 }
