--- a/pages/eventos/eventos.module.css
+++ b/pages/eventos/eventos.module.css
@@ -34,8 +34,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+   
 }
-
+.image{
+    position: relative;
+    width: clamp(20rem ,31.25vw, 41.25rem);
+    height: clamp(15rem ,26.041666666666668vw, 36rem);
+}
 .content{
     width: 60vw;
     margin: 0% 10%;
@@ -55,8 +61,9 @@
 }
 
 .content p{
+    width: 100%;
     font-family: sans-serif;
-    font-size: clamp(1rem, 2.5vw, 2rem) ;
+    font-size: clamp(1.4rem, 1.5vw, 3rem) ;
     text-align: justify;
     
     /* background-color: black; */
@@ -80,3 +87,15 @@
     /* background-color: #4C9ABB; */
 }
 
+
+@media (max-width: 1680px){
+    .sub_container {
+        flex-direction: column;
+    }
+
+    .barra{
+        flex-direction: column;
+        margin-bottom: 0%;
+        margin-top: 5%;
+    }
+}
