--- a/components/footer/css/content.module.css
+++ b/components/footer/css/content.module.css
@@ -45,6 +45,7 @@
         padding-left: 0%;
         width: 100vw;
         margin-right: 0%;
+        margin-left: 0;
         justify-content: center;
     }
 
