--- a/components/Banner/styles.module.css
+++ b/components/Banner/styles.module.css
@@ -14,7 +14,7 @@
     width: 70%;
     font-weight: bold;
     position: absolute;
-    font-size: 3vw;
+    font-size: clamp( 1rem,  3vw, 4rem);
     color: #FFFFFF;
     filter: grayscale(80%);
     /* background-color: red; */
